added error message for the case that the user entered the credentials incorrectly too often and added profile contact information card

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -148,6 +148,10 @@
     "@authfailure_invalid_credentials": {
         "description": "Fehlermeldung wenn die Zugangsdaten nicht existieren"
     },
+    "authfailure_too_many_requests": "Du hast deine Zugangsdaten zu oft falsch eingegeben. Versuche es später noch einmal.",
+    "@authfailure_too_many_requests": {
+        "description": "Fehlermeldung wenn zu oft falsche Anmeldedaten eingegeben wurden."
+    },
     "authfailure_unknown": "Ein unbekannter Fehler ist aufgetreten.",
     "@authfailure_unknown": {
         "description": "Fehlermeldung wenn ein unbekannter Fehler aufgetreten ist"
