--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -196,7 +196,7 @@
     "@auth_failure_weak_password": {
         "description": "error message when the password is too weak."
     },
-    "auth_failure_user_disabled": "The user is disabled.",
+    "auth_failure_user_disabled": "The user does not exist anymore. Please contact our support team for further investigation.",
     "@auth_failure_user_disabled": {
         "description": "error message when the user is disabled."
     },
@@ -607,7 +607,7 @@
             "date": {
                 "type": "String",
                 "example": "23.12.2023"
-            }   
+            }
         }
     },
     "promoter_overview_creation_date": "Member since {date}",
@@ -617,7 +617,7 @@
             "date": {
                 "type": "String",
                 "example": "23.12.2023"
-            }   
+            }
         }
     }
 }
